[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "depth-anything-v2"
version = "0.1.0"
description = "Depth Anything V2 models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "opencv-python"
]

[tool.setuptools.packages.find]
include = ["depth_anything_v2*"]